# ai-investment

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml  requirements-audit-lock.txt  requirements-audit.in  requirements-lock.txt  requirements-maintenance-lock.txt  requirements-maintenance.in  skills-lock.json
.claude/: settings.example.json  settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: architecture.md  data-governance.md  implementation-audit.md  operations.md
schemas/: sync-report.schema.json  xueqiu-record.schema.json
scripts/: bootstrap_skills.mjs  xueqiu_browser_scraper.mjs  xueqiu_comments_resume.mjs  xueqiu_edge_sync.mjs  xueqiu_incremental_sync.py  xueqiu_playwright_article_fetch.mjs  xueqiu_scraper.py  xueqiu_smoke.mjs
scripts/lib/: cdp_session.mjs  xueqiu_core.mjs
skills/: darwin-skill
tests/fixtures/: xueqiu-normalization-golden.json
tests/node/: bootstrap_skills.test.mjs  browser_legacy_safety.test.mjs  cdp_session.test.mjs  ci_policy.test.mjs  comments_resume_contract.test.mjs  corpus_manifest.test.mjs  edge_correctness.test.mjs  schema_contract.test.mjs  skill_validator.test.mjs  xueqiu_core.test.mjs  xueqiu_cross_runtime_contract.test.mjs  xueqiu_smoke.test.mjs  xueqiu_sync_scripts.test.mjs
tests/python/: test_dependency_locks.py  test_xueqiu_cross_runtime_contract.py  test_xueqiu_scraper.py
新国标产业思考/: README.md  company-watchlist.md  daily-template.md  standard-diff-notes.md  tracking.md  最终作业稿-信息如何影响金融定价-截至2026-07-01.md  最终作业稿-口语版-截至2026-07-01.md
(+135 files in other folders)
