[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-investment-research-tools"
version = "0.1.0"
description = "Local acquisition and validation tools for the AI investment research corpus"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31,<3",
]

[tool.setuptools]
py-modules = []
